--- a/pythonProject/config/db.conf
+++ b/pythonProject/config/db.conf
@@ -2,9 +2,11 @@
 [train]
 train_file = train_white.csv
 dev_file = dev_white.csv
+test_file = test_white.csv
 cloums = target,data
 embed_size = 200
 num_hiddens = 100
 num_layers = 2
 dropout = 0.1
 label_size = 2
+cache_dir = D:\glove.6B
