--- a/pythonProject/config/db.conf
+++ b/pythonProject/config/db.conf
@@ -5,10 +5,11 @@ dev_file = dev_white.csv
 test_file = test_white.csv
 cloums = target,data,seq_len
 embed_size = 200
-num_hiddens = 100
+num_hiddens = 200
 num_layers = 2
 dropout = 0.1
 label_size = 2
 cache_dir = D:\glove.6B
 num_epochs = 7
 lr = 0.004
+seed = 20
